feat(timer): JUnit5 기반의 TimerViewModel 테스트 코드 추가 및 리팩토링
- JUnit5와 `MainDispatcherExtension`을 사용하여 `TimerViewModel`의 전체적인 동작을 검증하는 테스트 코드를 추가
- 테스트 의존성 관리를 위해 `:core:testing` 모듈을 추가하고, Robolectric 의존성을 제거
- `TimerViewModel`과 `CountdownTimerUseCase`에서 시간 단위를 Long에서 `kotlin.time.Duration`으로 변경하여 타입 안정성을 강화
- 시간 입력을 위한 `TimeInputBottomSheet` 컴포저블을 추가하여 사용자가 시/분/초를 Picker 또는 키패드로 설정할 수 있도록 개선
- `Picker` 컴포넌트의 selectedItem이 외부에서 변경될 때 스크롤 위치가 동기화되지 않는 문제를 수정